--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,9 +28,12 @@
     ],
     "cSpell.ignoreWords": [
         "Pushd",
+        "battv",
         "hexversion",
         "igbpyutils",
         "openhook",
+        "ptemp",
+        "relhumid",
         "unitless"
     ],
 }
