--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,12 +28,22 @@
     ],
     "cSpell.ignoreWords": [
         "Pushd",
+        "autoclass",
+        "autodata",
+        "autoexception",
+        "autofunction",
         "battv",
+        "bysource",
+        "csvwriter",
+        "furo",
         "hexversion",
         "igbpyutils",
+        "intersphinx",
+        "nitpicky",
         "openhook",
         "ptemp",
         "relhumid",
+        "undoc",
         "unitless"
     ],
 }
