--- a/docs/Makefile
+++ b/docs/Makefile
@@ -1,7 +1,7 @@
 
 PYTHON3BIN = python
 
-.PHONY: all clean installdeps
+.PHONY: all clean upd-deps installdeps
 
 all:
 	$(PYTHON3BIN) -m sphinx -W . html
@@ -9,6 +9,9 @@ all:
 clean:
 	rm -rf html
 
-installdeps:
+upd-deps:
+	$(PYTHON3BIN) -m pip install --upgrade --upgrade-strategy=eager pip wheel pur
 	$(PYTHON3BIN) -m pur --skip-gt -r requirements.txt
+
+installdeps:
 	$(PYTHON3BIN) -m pip install --upgrade --upgrade-strategy=eager -r requirements.txt
