--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -24,7 +24,9 @@ jobs:
         with:
           python-version: 3.13
           cache: pip
-          cache-dependency-path: docs/requirements.txt
+          cache-dependency-path: |
+            requirements.txt
+            docs/requirements.txt
       - name: Install Dependencies
         working-directory: ./docs
         run: make installdeps
