--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -28,6 +28,8 @@ jobs:
             requirements.txt
             docs/requirements.txt
       - name: Install Dependencies
+        run: python -m pip install --upgrade --upgrade-strategy=eager -r requirements.txt
+      - name: Install Docs Dependencies
         working-directory: ./docs
         run: make installdeps
       - uses: actions/configure-pages@v5
