--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,10 +32,12 @@
         "autodata",
         "autoexception",
         "autofunction",
+        "automodule",
         "battv",
         "bysource",
         "csvwriter",
         "furo",
+        "genindex",
         "hexversion",
         "igbpyutils",
         "intersphinx",
