--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -13,6 +13,7 @@
         "oderwat.indent-rainbow",
         "tamasfe.even-better-toml",
         "streetsidesoftware.code-spell-checker",
+        "ms-vscode.live-server",
     ]
 }
 /* vim: set filetype=javascript ts=4 sw=4 expandtab : */
