--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -2,8 +2,9 @@ name: Generate and Deploy Pages
 
 on:
   push:
-    branches:
-      - 'main'
+    tags:
+      - 'v*'
+  workflow_dispatch:
 
 permissions:
   contents: read
