--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "PyTOA5"
 description = "Utilities for TOA5 Files"
-version = "0.9.1"
+version = "0.9.2"
 authors = [ { name="Hauke D", email="haukex@zero-g.net" } ]
 readme = "README.rst"
 requires-python = ">=3.9"
@@ -19,7 +19,8 @@ classifiers = [
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
     "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
-    "Development Status :: 5 - Production/Stable",
+    #"Development Status :: 5 - Production/Stable",
+    "Development Status :: 4 - Beta",
     "Operating System :: POSIX",
     "Operating System :: Unix",
     "Operating System :: Microsoft :: Windows",
